# Superman

./: .clang-format  .gitignore  CMakeLists.txt  Document.md  FEATURE.TXT  LANGUAGE_DOC_JAPANESE.MD  LICENSE  Makefile  Namespaces.md  README.MD  README.md  a.out  copy-bootstrap.sh  fire  line.sh  test.cpp  test.fire  test.txt
bootstrap/: Main.fire
bootstrap/IR/: High.fire  Middle.fire
bootstrap/Lexer/: Lexer.fire  SourceFile.fire  Token.fire
bootstrap/Lowering/: High.fire
bootstrap/Parser/: Node.fire
debug/: main.o.d
include/: Application.hpp  BuiltinFunc.hpp  Driver.hpp  Error.hpp  Eval.hpp  EvalNode.hpp  FSHelper.hpp  FSWrap.hpp  FileSystem.hpp  IR.hpp  IRHigh.hpp  IRLow.hpp  IRMiddle.hpp  IR_High.hpp  Lexer.hpp  Lower.hpp  Node.hpp  NodeLowering.hpp  NodeVisitor.hpp  Object.hpp  Parser.hpp  Sema.hpp  Source.hpp  SourceFile.hpp  Strings.hpp  Token.hpp  TypeInfo.hpp  Utils.hpp  VM.hpp  defs.hpp  fs_c.h  fs_impl.hpp  logger.h  macro.h  strconv.h  strconv.hpp  string.hpp  utf.hpp
src/: Application.cpp  Builtins.cpp  Compiler.cpp  Driver.cpp  Error.cpp  Eval.cpp  EvalNode.cpp  EvalType.cpp  FSHelper.cpp  FSWrap.cpp  IR.cpp  Lexer.cpp  Lower.cpp  NameResolver.cpp  Node.cpp  NodeLowering.cpp  Object.cpp  Parser.cpp  ParserExpr.cpp  ParserStmt.cpp  ParserToplevel.cpp  Sema.cpp  Sema_NameResolver.cpp  Sema_Scopes.cpp  Sema_TypeChecker.cpp  Source.cpp  SourceFile.cpp  Strings.cpp  Token.cpp  TypeChecker.cpp  TypeInfo.cpp  Utils.cpp  fs_c.c  fs_impl.cpp  main.cpp  strconv.c  strconv.cpp  string.cpp  utf.c  utf.cpp
test/: Classes.fire  Main.fire  test.fire
(+51 files in other folders)
